--- a/VetEM-app/package.json
+++ b/VetEM-app/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.22.1",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
