--- a/VetEM-app/package.json
+++ b/VetEM-app/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-maps": "^1.20.1",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
